--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -1625,15 +1625,7 @@ StScrollBar {
   spacing: 15px; }
 
 .keyboard-key {
-  color: #f8f8f8;
-  background-gradient-start: #585858;
-  background-gradient-end: #363636;
-  background-gradient-direction: vertical;
-  box-shadow: none;
-  border: 1px solid rgba(68, 71, 90, 0.4);
-  text-shadow: 0 1px black;
-  icon-shadow: 0 1px black;
-  background: #393939;
+  background-color: #393939;
   min-height: 2em;
   min-width: 2em;
   font-size: 14pt;
@@ -1641,30 +1633,10 @@ StScrollBar {
   border-radius: 5px;
   border: 1px solid rgba(68, 71, 90, 0.4);
   color: white; }
-  .keyboard-key:focus {
-    color: #f8f8f8;
-    text-shadow: 0 1px black;
-    icon-shadow: 0 1px black;
-    box-shadow: none;
-    border: 1px solid rgba(0, 200, 112, 0.5);
-    background: #353535; }
-  .keyboard-key:hover, .keyboard-key:checked {
-    color: #00c870;
-    background-gradient-start: #585858;
-    background-gradient-end: #363636;
-    background-gradient-direction: vertical;
-    box-shadow: none;
-    text-shadow: 0 1px black;
-    icon-shadow: 0 1px black; }
+  .keyboard-key:focus, .keyboard-key:hover, .keyboard-key:checked {
+    background-color: #464646; }
   .keyboard-key:active {
-    color: #fefefe;
-    background-gradient-start: #00c870;
-    background-gradient-end: #00c870;
-    background-gradient-direction: vertical;
-    box-shadow: none;
-    border: none;
-    text-shadow: none;
-    icon-shadow: none; }
+    background-color: #00c870; }
   .keyboard-key:grayed {
     background-color: rgba(38, 38, 38, 0.88);
     color: #f8f8f8;
